# projeto_vc_2

./: .gitignore  pyproject.toml
utils/: common.py  growing_regions.py  hough.py  morph.py  threshold.py  watershed.py  wavelet.py
