[tool.poetry]
name = "projeto_vc_2"
version = "0.1.0"
description = ""
authors = ["yalr098 <yvesromero1998@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.3"
matplotlib = "^3.6.0"
opencv-python = "^4.6.0"
imutils = "^0.5.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
